src/test/ui/impl-trait/issues/universal-turbofish-in-method-issue-50950.stderr
error[E0107]: this associated function takes 1 generic argument but 2 generic arguments were supplied
  --> $DIR/universal-turbofish-in-method-issue-50950.rs:14:9
   |
LL |     evt.handle_event::<TestEvent, fn(TestEvent)>(|_evt| {
   |         ^^^^^^^^^^^^              ------------- help: remove this generic argument
   |         |
   |         expected 1 generic argument
   |
note: associated function defined here, with 1 generic parameter: `T`
  --> $DIR/universal-turbofish-in-method-issue-50950.rs:7:12
   |
LL |     pub fn handle_event<T: Any>(&mut self, _efunc: impl FnMut(T)) {}
   |            ^^^^^^^^^^^^ -
   = note: `impl Trait` cannot be explicitly specified as a generic argument

error: aborting due to previous error

For more information about this error, try `rustc --explain E0107`.
